; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_info.c_HPDF_Info_SetInfoAttr.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_info.c_HPDF_Info_SetInfoAttr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@.str = private unnamed_addr constant [24 x i8] c" HPDF_Info_SetInfoAttr\0A\00", align 1
@HPDF_INFO_MOD_DATE = common dso_local global i64 0, align 8
@HPDF_INVALID_PARAMETER = common dso_local global i32 0, align 4
@HPDF_INFO_TRAPPED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @HPDF_Info_SetInfoAttr(%struct.TYPE_5__* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i64, i64* %7, align 8
  %12 = call i8* @InfoTypeToName(i64 %11)
  store i8* %12, i8** %10, align 8
  %13 = call i32 @HPDF_PTRACE(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* @HPDF_INFO_MOD_DATE, align 8
  %16 = icmp sle i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @HPDF_INVALID_PARAMETER, align 4
  %22 = call i32 @HPDF_SetError(i32 %20, i32 %21, i32 0)
  store i32 %22, i32* %5, align 4
  br label %42

23:                                               ; preds = %4
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* @HPDF_INFO_TRAPPED, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %32

27:                                               ; preds = %23
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = call i32 @HPDF_Dict_AddName(%struct.TYPE_5__* %28, i8* %29, i8* %30)
  store i32 %31, i32* %5, align 4
  br label %42

32:                                               ; preds = %23
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %34 = load i8*, i8** %10, align 8
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i8*, i8** %8, align 8
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @HPDF_String_New(i32 %37, i8* %38, i32 %39)
  %41 = call i32 @HPDF_Dict_Add(%struct.TYPE_5__* %33, i8* %34, i32 %40)
  store i32 %41, i32* %5, align 4
  br label %42

42:                                               ; preds = %32, %27, %17
  %43 = load i32, i32* %5, align 4
  ret i32 %43
}

declare dso_local i8* @InfoTypeToName(i64) #1

declare dso_local i32 @HPDF_PTRACE(i8*) #1

declare dso_local i32 @HPDF_SetError(i32, i32, i32) #1

declare dso_local i32 @HPDF_Dict_AddName(%struct.TYPE_5__*, i8*, i8*) #1

declare dso_local i32 @HPDF_Dict_Add(%struct.TYPE_5__*, i8*, i32) #1

declare dso_local i32 @HPDF_String_New(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
